feat: update feedback route and swagger
