# src/routes/feedback-router.js
@@ -3,6 +3,7 @@ import {
   addFeedback,
   getAllFeedbacks,
   getSingleFeedback,
+  updateFeedback,
 } from "../controllers/feedback-controller.js";
 
 const feedbackRouter = express.Router();
@@ -10,5 +11,6 @@ const feedbackRouter = express.Router();
 feedbackRouter.get("/feedbacks", getAllFeedbacks);
 feedbackRouter.get("/feedbacks/:id", getSingleFeedback);
 feedbackRouter.post("/feedbacks/new", addFeedback);
+feedbackRouter.put("/feedback", updateFeedback);
 
 export default feedbackRouter;
